# shri_boxy

./: .gitmodules  README.md
boxy_logger_node/: CMakeLists.txt  package.xml
boxy_logger_node/src/: logger_node.py
boxy_robot/: CMakeLists.txt  package.xml
boxy_robot/config/: perception_conf.yaml  perception_touch_conf.yaml
boxy_robot/launch/: bringup.launch  google_speech.launch  robot.launch  sensor.launch  server.launch
boxy_robot/scripts/: test.rive
boxy_robot/src/: behavior.py  idle_motion.py  keyboard_events.py  pca9685.py  rotation_sensor.py  touch_sensor.py  touch_sensor_o.py
darwin_mini/: CMakeLists.txt  package.xml
darwin_mini/config/: motions.yaml  percep_conf_touch_sensor.yaml  perception_rotation_conf.yaml
darwin_mini/launch/: bringup.launch
darwin_mini/src/: darwin_mini.py  dynamixel_functions.py
shri_logger_node/: CMakeLists.txt  package.xml
shri_logger_node/src/: logger_node.py
