<?xml version="1.0"?>
<package>
  <name>shri_logger_node</name>
  <version>0.0.0</version>
  <description>The shri_logger_node package</description>

  <maintainer email="movehoon@gmail.com">Daniel Lee</maintainer>
  <author email="movehoon@gmail.com">Daniel Lee</author>

  <license>BSD</license>
  <url type="website">https://github.com/movehoon/shri_boxy</url>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>mhri_msgs</build_depend>
  <build_depend>motion_arbiter</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>mhri_msgs</run_depend>
  <run_depend>motion_arbiter</run_depend>
  <run_depend>rospy</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
